fixed glow but overflow doesnt work

--- a/sass/pages/_productlist.scss
+++ b/sass/pages/_productlist.scss
@@ -48,11 +48,12 @@
 .beersContainer {
   margin-top: 4rem;
   display: flex;
-  overflow-x: hidden;
+  //overflow-x:hidden ;
   gap: 4rem;
 }
 
 .beer {
+  position: relative;
   width: fit-content;
   display: flex;
   flex-direction: column;
@@ -63,6 +64,7 @@
 .beer Figure {
   margin: 0;
   margin-bottom: 10px;
+  position: relative;
 }
 
 .beerGlass {
@@ -70,7 +72,13 @@
 }
 
 .beerGlass:hover {
-  box-shadow: 0px 0px 55px 0px #e9ccff;
+  -webkit-filter: drop-shadow(0px 0px 55px #e9ccff);
+  filter: drop-shadow(0px 0px 55px #e9ccff);
+}
+
+.beerGlass:active {
+  -webkit-filter: drop-shadow(0px 0px 55px #e9ccff);
+  filter: drop-shadow(0px 0px 55px #e9ccff);
 }
 
 .beerName,
